--- a/index.css
+++ b/index.css
@@ -88,8 +88,10 @@ header{
 }
 
 .content {
-    grid-area: content;
-    
+    grid-area: content;   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* .form {
@@ -101,13 +103,11 @@ header{
 
 a{
     color: #2B3044;
+    text-decoration: none;
     
 }
 
-ul{
-    padding: 1.5rem;
-    text-align: start;
-}
+
 h1{
     text-align: center;
 }
@@ -140,6 +140,8 @@ input{
 
 .content h3{
     padding: 0 0 1rem 0;
+    align-self: flex-start;
+  
 } 
 
 .lineaBoton{
@@ -149,11 +151,24 @@ input{
 }
 
 ul{
-    padding-left: 3rem;
+    /* padding-left: 3rem; */
     text-align: left;
+    padding: 1.5rem 1.5rem 1.5rem 3rem;
+    line-height: 1.5rem;
+   
 }
 
 .listas{
     list-style-image: url("https://img.icons8.com/?size=30&id=GtNDsBqnWPYF&format=png");
 
+}
+
+
+textarea{
+    padding: 1rem;
+    font-family:  'Poppins', sans-serif; 
+    color: #222222;
+    resize:none;
+    width: 45vw;
+    height: 45vh; 
 }
