--- a/index.css
+++ b/index.css
@@ -94,29 +94,15 @@ header{
     align-items: center;
 }
 
-/* .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
-
-a{
-    color: #2B3044;
-    text-decoration: none;
-    
-}
-
-
 h1{
     text-align: center;
+    font-family:  'Poppins', sans-serif; 
 }
 
 button{
     background-color: transparent;
     font-family:  'Poppins', sans-serif; 
     border: none;
-
 }
 
 button:hover{
@@ -145,6 +131,11 @@ input{
     
 }
 
+a{
+    color: #2B3044;
+    text-decoration: none;
+}
+
 ul{
     /* padding-left: 3rem; */
     text-align: left;
@@ -153,10 +144,50 @@ ul{
    
 }
 
+.users ul{
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.listaUsers{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
 
 .listas{
-    list-style-image: url("https://img.icons8.com/?size=25&id=GtNDsBqnWPYF&format=png");
-    
+    /* list-style-image: url("toystory.jpg"); */
+    list-style: none;
+}
+
+.iconosL{
+
+    background: url(toystory.png);
+    height: 50px;
+    background-position: 210px 110px;
+    width: 30px;
+
+}
+
+.iconosV{
+    background: url(toystory.png);
+    height: 50px;
+    background-position: 994px -60px;
+    width: 30px;
+}
+
+.iconos{
+    background: url("toystory.png") ;
+    height: 50px;
+    background-position: 210px -1px;
+    width: 30px;
+}
+
+.iconosA {
+    background: url(toystory.png);
+    height: 50px;
+    background-position: 210px  1116px;
+    width: 30px;
 }
 
 .guionLista{
@@ -198,3 +229,78 @@ textarea::placeholder{
     font-style:oblique;
     font-family:  'Poppins', sans-serif; 
 }
+
+/* aca pruebas para modal */
+
+.modalDialog {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+.modalDialog > div {    
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+	width: 50vw;
+    height: 50vh;
+	position: relative;
+	margin: 10% auto;
+	padding: 2rem;
+	border-radius: 10px;
+	background: #fff;
+
+}
+
+.modalDialog p{
+    font-family:  'Poppins', sans-serif; 
+    font-size: 18px;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.modalDialog h1{
+    font-size: 30px;
+    font-weight:bold;
+}
+
+.personajes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.cosas{
+    transition: transform .7s ease-in-out;
+}
+.cosas:hover{
+    cursor: pointer;
+    transform: rotate(360deg);
+    filter: invert(0%) sepia(30%) saturate(0%) hue-rotate(346deg) brightness(104%) contrast(97%) ;
+   
+}
+
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+
+}
+.close:hover { background: #1d5ec0; }
+  
